--- a/inlog/requirements.txt
+++ b/inlog/requirements.txt
@@ -1,5 +1,6 @@
 attrs==23.1.0
 certifi==2023.7.22
+chardet==5.2.0
 click==8.1.7
 click-plugins==1.1.1
 cligj==0.7.2
@@ -23,4 +24,5 @@ pytz==2023.3.post1
 shapely==2.0.2
 six==1.16.0
 tzdata==2023.3
+xlrd==2.0.1
 zipp==3.17.0
